--- a/index.html
+++ b/index.html
@@ -8,19 +8,11 @@
 		<style type="text/css">
 			a {text-decoration:none}
 			a {display: block;}
+			var _hmt = _hmt || [];
+			(function() {
+			  var hm = document.createElement("script");
+			  hm.src = "https://hm.baidu.com/hm.js?dbc09cc585d9dc4f3041dfe9411dead2";
+			  var s = document.getElementsByTagName("script")[0]; 
+			  s.parentNode.insertBefore(hm, s);
+			})();
 		</style>
-	</head>
-	<body>
-		<h1>超链接</h1>
-		<a href="../index.html" style="color:red">主页</a>
-		<a href="死亡测试.html">死亡测试</a>
-		<a href="图片.html">图片</a>
-		<a href="视频.html">视频</a>
-		<a href="音乐.html">音乐</a>
-		<h1>公告</h1>
-		<p>现在添加了一些音乐，并且把刀剑神域一，二部上传完成，要看的可以在视频页里面观看</p>
-		<p>之后会添加BILIBILI被封禁的猎奇视频，和一些乱七八糟的东西</p>
-		<p>之后会添加一个网址导航，会收录很多比较有用的网址【个人认为】</p>
-		<p>网站的域名已经买了，是wuminweb.top,但是没有激活，因为没有实名认证，应该在这几天就可以使用了，大家可以再等等</p>
-	</body>
-</html>
